<resources>
    <string name="app_name">Guess the Word</string>

    <string name="get_ready">Get ready to</string>
    <string name="guess_the_word">guess the word!</string>
    <string name="play">PLAY</string>

    <string name="the_word_is">The word is...</string>
    <string name="quote_format">\"%s\"</string>
    <string name="score">Score: %d</string>
    <string name="got_it">GOT IT</string>
    <string name="skip">SKIP</string>

    <string name="you_scored">You Scored</string>
    <string name="play_again">PLAY AGAIN</string>
</resources>